--- a/vignettes/articles/oauth.Rmd
+++ b/vignettes/articles/oauth.Rmd
@@ -13,39 +13,58 @@ knitr::opts_chunk$set(
 library(httr2)
 ```
 
-If the API provides access to a website where the user already has an account (think Twitter, Instagram, Facebook, Google, GitHub, etc), it's likely to use OAuth to allow you to authorise on behalf of the user.
-OAuth[^1] is an authorisation framework that's designed so that you don't have to share your username and password with an app; instead the app asks for permission to use your account.
-You've almost certainly used this before on the web; it's used in most cases where one website wants to use another website on your behalf.
+OAuth[^1] is a authorization framework design for performing work on the behalf of a user.
+It allows you to wrap an API that requires a user login without your app ever directly seeing the user's user name and password.
+You've almost certainly used this before on the web or with your TV; it's used in most cases where one website (or your TV) needs to login to an account on your behalf.
 
 [^1]: Here I'll only talk about OAuth 2.0 which is the only version in common use today.
     OAuth 1.0 is largely only of historical interest.
 
-OAuth is a broad framework that has many many many different variants which makes it hard to provide generalisable advice.
-The following advice draws on my experience working with a number of OAuth using APIs, but don't be surprised if you need to do something slightly different for the API you're working with.
+OAuth is a broad framework that has many different variants, called **flows**, which makes it hard to provide generalisable advice.
+The one commonality is that all flows eventually generate an **access token** (essentially a random string of numbers and letters) which is provided to the API in the form of a **bearer token** in the `Authorization` header.
+If you have this access token, you can use it directly with `req_auth_bearer_token()`, but in most cases you will want to give httr2 the information to generate and use the access token for you by calling a `req_oauth_` function.
+The rest of the vignette describes just how to do that.
 
 ## Clients
 
-The first step in working with any OAuth API is to create a client.
-This involves you registering for a developer account on the API's website and creating a new OAuth app.
-The process varies from API to API, but at the end of it you'll get a client id and in most cases a client secret.
+The first step in working with any OAuth API is to create an **application** **client**, which I'll generally just call a **client**.
+You'll do this by registering for a developer account on the API's website then creating a new OAuth app.
+This process varies from API to API (it's normal to spend some time hunting through the docs and settings), but at the end of it you'll get a client id (another random string of numbers and letters).
 
-(You'll definitely need this for testing your package, and you'll probably also baked it into your package for the convenience of your users. Bundling the app is user friendly, but not always possible, particularly if rate limits are enforced on a per-app rather than per-user basis. You should always provide some way for the user to provide their own app.)
+Sometimes the client id is all you need, and you can give httr2 the information about the client with a call to `oauth_client()`, something like this:
 
-If the API provides a way to authenticate your app without the client secret, you should leave it out of your package.
-But in most cases, you'll need to include the secret in the package.
-You can use `obfuscate()` to hide the secret; this is not bulletproof[^2], but in most cases it'll be easier to create a new client than try and steal yours.
-Additionally, it's unusual for an OAuth client to be able to do anything in its own right, so even if someone does steal your secret there's not much harm they can do with it.
+```{r}
+client <- oauth_client(
+  id = "28acfec0674bb3da9f38",
+  token_url = "https://github.com/login/oauth/access_token",
+  name = "hadley-oauth-test-2"
+)
+```
 
-[^2]: It uses `secret_encrypt()` with a special encryption key that's bundled with httr2.
+The call to `oauth_client()` also includes a `name` and a `token_url`.
+The `name` is human facing and should typically be the same as the package, if you're using one.
+I have a bunch of apps that I've used for testing, so here I've and is used to remind you which app the client corresponds to.
+The `token_url` points to the URL that's used to obtain an access token.
+You'll need to find this from the documentation for the API you're wrapping; it will typically be found in the section that describes the OAuth process and will be an endpoint that returns an access token.
 
-To obfuscate a secret, call `obfuscate()`:
+### Client secret
+
+In most cases, however, the API will also require a client secret.
+While this is called a secret, it's typically not that important to keep it a secret because of two reasons:
+
+-   It's typically easy to create an new app on the developer website so stealing yours wouldn't save much time.
+-   It's unusual for an OAuth client to be able to do anything in its own right, so stealing your secret doesn't have much benefit.
+
+That said, httr2 provides some tooling to obfuscate your client secret so that the client secret isn't directly embedded in your source code, and hence vulnerable to scraping off GitHub or similar.
+
+To obfuscate a string, call `obfuscate()` then copy and paste the result into your package.
+For example, if your client secret was "secret", you'd call `obfuscate()` then you'd copy and paste `obfuscated("B4Evdd5x4wl0XTWvtTpuGaw7nM7GEg")` into your client specification.
 
 ```{r}
 obfuscate("secret")
 ```
 
-Then use the client id from the website along with the obfuscated secret to create a client.
-The following code shows a GitHub OAuth app that I created specifically for this vignette:
+Here's what a complete client specification for GitHub looks like, using a real app that I created specifically for this vignette:
 
 ```{r}
 client <- oauth_client(
@@ -56,25 +75,48 @@ client <- oauth_client(
 )
 ```
 
-You need to figure out the `token_url` from the [documentation](https://docs.github.com/en/developers/apps/building-oauth-apps/authorizing-oauth-apps).
-I wish I could give good advice about how to find it 😞.
+You can certainly uncover my client secret if you are an experienced R programmer and are willing to spend a bit of time experimenting, but I'm pretty sure it'd be easy for you to just create your own app on GitHub.
 
-Note that if you print the client the secret is automatically redacted:
+### Packaging
+
+I recommend wrapping client creation in a function in your package, e.g.:
 
 ```{r}
-client
+github_client <- function() {
+  oauth_client(
+    id = "28acfec0674bb3da9f38",
+    secret = obfuscated("J9iiGmyelHltyxqrHXW41ZZPZamyUNxSX1_uKnvPeinhhxET_7FfUs2X0LLKotXY2bpgOMoHRCo"),
+    token_url = "https://github.com/login/oauth/access_token",
+    name = "hadley-oauth-test"
+  )
+}
 ```
 
-You'll probably want to wrap this up in a function in your package.
-For an example, you might take a look at `example_github_client()`, which I provide in httr2 because I use it in a couple of different OAuth examples.
+You'll need this in order to run tests for your package, but you'll probably also want to use it as the default client for your users.
+In some cases, it will be necessary for each user to create their own app and matching client (e.g. if rate limits are applied by app, not by user), but this is much less user friendly so you should avoid it if possible.
+That said, you should always provide a way for a user to provide their own client if when you do bundle a default.
 
 ## Authorization code flow
 
-Once you have a client you need to use it with a **flow** in order to get a token.
-OAuth provides a number of different "flows", the most common is the "authorisation code" flow, which is implemented by a pair of functions `oauth_flow_auth_code()` and `req_oauth_auth_code()`.
+Once you have a client you need to use it with a flow in order to get a token.
+You'll need to read the docs for your API to figure out which flows it supports, but the most common is the **authorisation code**[^2] flow, which works something like this:
 
-I'd recommend starting with the `oauth_flow_` function.
-You won't use this when actually performing requests, but it it's the best way to verify that you can get a OAuth token, without having to worry about any other part of the API.
+[^2]: Confusingly, Github calls this the "web application flow", but this is not the official name.
+    This is a general problem with OAuth docs; often they use different terms for the same things.
+    In httr2, I've tried to stick as closely as possible to the terms used in the official RFC specifications.
+
+1.  httr2 sends the user to an **authorization URL** provided by the API. The URL includes parameters that identify your app and what **scope** of access you're looking for.
+2.  The user signs in and approves the request.
+3.  The API sends an **authorization code** back to httr2 using a callback URL that was supplied in the initial request.
+4.  httr2 sends the authorization code to the **token URL** to get an access token.
+
+In httr2 this flow is implemented by a pair of functions: `oauth_flow_auth_code()` and `req_oauth_auth_code()`.
+Start with `oauth_flow_auth_code()` to check that you have all the parameters correctly specified, then use `req_oauth_auth_code()` to authenticate requests.
+These two steps are described in the following sections.
+
+### Creating a token
+
+``` oauth_flow_auth_code(``) ``` is the best way to verify you've correctly specified the parameters to the client and the `auth_url`, without depending on correclty understanding any other part of the API.
 For example, you could get a token to access the GitHub API (using the client defined above) with this code:
 
 ```{r, eval = FALSE}
@@ -84,8 +126,7 @@ token <- oauth_flow_auth_code(
 )
 ```
 
-This flow can't be used inside a vignette because it's designed specifically for interactive use: it will open a webpage on GitHub that requires you to interactively confirm it's OK for this app to use your GitHub account.
-But if you do run it and print out the `token`, you'll see something like this:
+This flow can't be used inside a vignette because it's designed specifically for interactive use, but if you do run it and print out the `token`, you'll see something like this:
 
 ```{r}
 #| eval: false
@@ -96,15 +137,22 @@ token
 #> scope: ''
 ```
 
+There's not much to see here because httr2 automatically redacts the access token (because that could be used to perform actions on behalf of the user).
+
 If your call to `oauth_flow_auth_code()` succeeds then you've got everything set up correctly and you can proceed to the next step.
-If it doesn't, you'll need to do a bunch of careful checking and experimentation 😞.
+Otherwise, you'll get an HTTP error.
+If you're very luckily, that error will be informative and will help you figure out want went wrong.
+However, in most cases, you'll need to carefully double check that you've correctly copied and pasted the client id and secret, and check that you've supplied the correct authorization and token urls (`auth_url` and `token_url`).
+If the docs have multiple candidates for each and you're unclear about which is which, you'll need to do some systematic experimentation.
 
-This is typically the only time that you'll see a OAuth token object because you'll generally want to rely on httr2 to manage the tokens for you.
-You do so by using `req_oauth_auth_code()`, as described next.
-Most APIs provide some way to get information about the current user, so this is typically a good place to test that you've set everything up correctly.
+### Authenticating a request
 
-For example, with GitHub we can make a `GET` request to `/user`.
-If we do this without setting up authentication, we'll get an error:
+Initial configuration is the only time that you'll see a `httr2_token` object because you'll generally want to rely on httr2 to manage the tokens for you.
+You'll do that with `req_oauth_auth_code()` and to check that it's working correctly, I recommend finding the simplest possible API endpoint to test it with.
+A good place to start is an endpoint that provides information about the "current" user, if your API provides it.
+
+For example, the GitHub API provides a `GET` endpoint at `/user` that returns information about the current user.
+If we make a request to this endpoint without authentication, we'll get an error:
 
 ```{r}
 #| error: true
@@ -113,13 +161,13 @@ req %>%
   req_perform()
 ```
 
-We can authenticate this request with `req_oauth_auth_code()`, which uses the same arguments as `oauth_flow_auth_code()`:
+We can authenticate this request with `req_oauth_auth_code()`, using the same arguments as our previous call to `oauth_flow_auth_code()`:
 
 ```{r}
 #| eval: false
 req %>% 
   req_oauth_auth_code(
-    client = client,
+    client = github_client(),
     auth_url = "https://github.com/login/oauth/authorize"
   ) %>% 
   req_perform() %>% 
@@ -127,7 +175,7 @@ req %>%
   str()
 ```
 
-When you run this code, you'll see something like this, but obviously it will contain information about you, not me.
+When you run this code, you'll see something like this, but it will obviously contain information about you, not me.
 
 ```{r}
 #| eval: false
@@ -148,19 +196,24 @@ When you run this code, you'll see something like this, but obviously it will co
 #>  $ location     : chr "Houston, TX"
 ```
 
+### Token management
+
+There are two big reasons to allow httr2 to manage tokens for you.
+The first is that httr2 will automatically refresh the token if it's expired.
+The second is cross-session caching which you can turn on with `cache_disk = TRUE`.
+Turning it on means that your users will only need to re-authenticate once a month, but does means their credentials are saved on disk.
+Reading the "Caching" section in `?req_oauth_auth_code` for more details.
+
 ## Other flows
 
 When wrapping an API, you'll need to carefully read the documentation to figure out which flows it provides.
-Typically you'll want to use the auth code flow, but if it's not available you'll need to carefully consider the others.
+If possible you'll want to use the authorization code flow since it generally provides the best experience, but if it's not available you'll need to carefully consider the others.
 Currently, httr2 supports the following flows:
-
--   `req_oauth_client_credentials()` is used to allow the client to perform actions on its own behalf (instead of on behalf of some other user).
-    This is typically need if you want to support **service accounts**, which are used in non-interactive environments.
 
 -   `req_oauth_device()` uses the "device" flow which is designed for devices like TVs that don't have an easy way to enter data.
     It also works well from the console.
 
--   `req_oauth_bearer_jwt()` uses a JWT signed by a private key.
+-   `req_oauth_client_credentials()` and `req_oauth_bearer_jwt()` are often needed for **service accounts**, accounts that represent automated services, not people, and are often used in non-interactive environments.
 
 -   `req_oauth_password()` exchanges a user name and password for an access token.
 
@@ -171,53 +224,10 @@ httr2 doesn't support the implicit grant flow.
 This was historically important but is now [mostly deprecated](https://developer.okta.com/blog/2019/05/01/is-the-oauth-implicit-flow-dead) and was never a particularly good fit for R because it relies on a technique for returning the access token that only reliably works inside a web browser.
 
 Regardless of which flow you use, you'll need to follow the same process as the example above: first get figure out how to get a token using the `oauth_flow_` function, then actually use with a request, by calling the matching `req_oauth_` function.
-One additional wrinkle is that many APIs don't implement the flow in exactly the same way as the spec.
+
+One additional wrinkle is that many APIs don't implement the flow in exactly the same way as the spec so httr2's built-in flows might not work at all.
 If your initial attempt doesn't work, you're going to need to do some sleuthing.
 This is going to be painful, but unfortunately there's no way around it.
 I recommend using `with_verbosity()` so you can see exactly what httr2 is sending to the server.
 You'll then need to carefully compare this to the API documentation and play "spot the difference".
-
-## Tokens
-
-The point of a flow is to get a token.
-You can use `req_auth_bearer_token()` to authorise a request with the access token stored inside the token object:
-
-```{r, eval = FALSE}
-request("https://api.github.com/user") %>% 
-  req_auth_bearer_token(token$access_token) %>% 
-  req_perform() %>% 
-  resp_body_json() %>%
-  .$name
-#> [1] "Hadley Wickham"
-```
-
-However, in most cases you won't want to do this, but instead allow httr2 to manage the whole process, by switching from `oauth_flow_{name}` to `req_oauth_{name}`:
-
-```{r, eval = FALSE}
-request("https://api.github.com/user") %>% 
-  req_oauth_auth_code(client, auth_url = "https://github.com/login/oauth/authorize") %>% 
-  req_perform() %>% 
-  resp_body_json()
-```
-
-This is important because most APIs provide only a short-lived access token that needs to be regularly refreshed using a longer-lived refresh token.
-httr2 will automatically refresh the token if it's expired (i.e. its expiry date is in the past) or if the request errors with a 401 and there's an `invalid_token` error in the `WWW-authenticate` header.
-
-## Caching
-
-By default, `req_oauth_auth_code()` and friends will cache the token in memory, so that multiple requests in the same session all use the same token.
-In some cases, you may want to save the token so that it's automatically used across sessions.
-This is easy to do (just set `cache_disk = TRUE` in `req_oauth_auth_code()`) but you need to carefully consider the consequences of saving the user's credentials on disk.
-
-httr2 does the best it can to save these credentials securely.
-They are stored in a local cache directory (`oauth_cache_path())` that should only be accessible to the current user, and are encrypted so they will be hard for any package other than httr2 to read.
-However, there's no way to prevent other R code from using httr2 to access them, so if you do choose to cache tokens, you should inform the user and give them the ability to opt-out.
-
-You can see which clients have cached tokens by looking in the cache directory used by httr2:
-
-```{r}
-dir(oauth_cache_path(), recursive = TRUE)
-```
-
-httr2 automatically deletes any cached tokens that are older than 30 days whenever it's loaded.
-This means that you'll need to re-auth at least once a month, but prevents tokens for hanging around on disk long after you've forgotten you created them.
+You're very welcome to file an issue and I'll do my best to help you out.
